nova_tests/negative_capability/generic_default_ordering_rejected.nv
// EXPECT_COMPILE_ERROR default
//
// Plan 19 D88: параметры с default-значением должны идти ПОСЛЕ
// обязательных. `[T = int, U]` — обязательный U после default'а T —
// нарушение порядка, compile error.

module nova_tests.negative_capability.generic_default_ordering_rejected

fn bad_order[T = int, U](x T, y U) -> T => x

test "required after default rejected" {
    assert(bad_order(1, "x") == 1)
}
